--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 
 # misc
 .DS_Store
+.package-lock.json
+package-lock.json
+package-lock.json*
 .env.local
 .env.development.local
 .env.test.local
