--- a/package.json
+++ b/package.json
@@ -8,20 +8,26 @@
     "@types/node": "^12.20.16",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
-    "babel-jest": "^26.6.0",
-    "jest": "^26.6.0",
+    "awesome-typescript-loader": "^5.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-svg": "^14.0.4",
+    "source-map-loader": "^3.0.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.5",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "webpack": "^4.44.2"
+  },
+  "resolutions": {
+    "jest": "26.6.0",
+    "webpack": "4.44.2",
+    "babel-jest": "26.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test:jest": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,5 +52,27 @@
     "moduleDirectories": [
       "node_modules"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@emotion/react": "^11.4.0",
+    "@types/enzyme": "^3.10.9",
+    "@types/jest": "^26.0.24",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^26.6.3",
+    "enzyme": "^3.11.0",
+    "file-loader": "^6.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
+    "jest-dom": "^4.0.0",
+    "jest-styled-components": "^7.0.2",
+    "react-test-renderer": "^17.0.2",
+    "ts-jest": "^27.0.3"
   }
 }
