--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test:jest": "jest",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
