--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "awesome-typescript-loader": "^5.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^2.1.3",
     "react-svg": "^14.0.4",
     "source-map-loader": "^3.0.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2",
-    "webpack": "^4.44.2"
+    "webpack": "^5.70.0"
   },
   "resolutions": {
     "jest": "26.6.0",
