--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "baseUrl": ".",
+    "jsx": "preserve",
     "noFallthroughCasesInSwitch": true
   },
   "include": [
