--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "dependencies": {
+    "http-proxy-middleware": "^2.0.6",
     "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
